--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,79 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body, button {
+    font-family: "Montserrat", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --color-grey: #797979;
+    --color-black: #4D4D4D;
+    --color-blue: #2FBAE5;
+    --color-white: #FFFFFF;
+    --color-yellow: #FFD24D;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+section {
+    margin-bottom: 100px;
+}
+
+header {
+    opacity: .5;
+}
+
+h1 {
+    font-weight: 900;
+    font-size: 100px;
+    line-height: 122px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+h2 {
+    font-weight: 900;
+    font-size: 36px;
+    line-height: 44px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+h3 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+    color: var(--color-black);
+}
+
+h4 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--color-black);
+}
+
+h5 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: var(--color-black);
+}
+
+h6 {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--color-black);
+}
+
+p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
 }
