--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,12 +20,19 @@ body, button {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 section {
     margin-bottom: 100px;
 }
 
 header {
-    opacity: .5;
+    opacity: .7;
 }
 
 h1 {
@@ -59,14 +66,15 @@ h4 {
 }
 
 h5 {
+    margin-bottom: 0;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 20px;
+    line-height: 25px;
     color: var(--color-black);
 }
 
 h6 {
-    font-weight: 700;
+    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     color: var(--color-black);
